# fastapi_project

./: README.md  pyproject.toml
app/: jwt_handler.py  main.py  models.py  routes.py
