[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "A FastAPI project for MOSEF course"
authors = ["Thy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.115.0"
unicorn = "^2.1.0"
pydantic = "^2.9.2"
python-jose = "^3.3.0"
crytography = "^1.0.0"
requests = "^2.32.3"
scikit-learn = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
